fixed the hero section isseu on mobile phones

--- a/src/App.css
+++ b/src/App.css
@@ -314,6 +314,9 @@ body {
 .PISlides {
   display: none;
 }
+
+/* hero */
+
 .hero {
   background-image: linear-gradient(
       90deg,
@@ -324,6 +327,14 @@ body {
   background-repeat: no-repeat;
   background-size: 100vw 100vh;
   background-attachment: fixed;
+}
+
+@media (max-width: 475px) {
+  /*Mid-Mobile screens*/
+  .hero {
+    background-size: 200vw 100vh;
+    background-position: center;
+  }
 }
 
 /* Quote BGs*/
